--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
@@ -7,11 +7,13 @@
 <head>
 	<script>
 	const GLOBAL_CONST = {
+		"USERNAME": "[[${USERNAME}]]",
+		"NAME": "[[${NAME}]]",
 		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
 		"TIME_FORMAT": "[[${TIME_FORMAT}]]",
 		"DELIMITER": "[[${DELIMITER}]]",
-		"YES": "[[${T(org.jwebppy.portal.iv.common.IvCommonVo).YES}]]",
-		"NO": "[[${T(org.jwebppy.portal.iv.common.IvCommonVo).NO}]]"
+		"YES": "[[${YES}]]",
+		"NO": "[[${NO}]]"
 	};
 	</script>
 
