--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -143,8 +143,10 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 .logo-doosan {
 	position:relative;
 	vertical-align: middle;
+	z-index: 9999;
 }
 .logo-doobizplus {
+	position:relative;
 	margin-left: 20px;
 	cursor: pointer;
 	/*
@@ -152,6 +154,7 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 	height:23px;
 	*/	
 	vertical-align: middle;
+	z-index: 9999;
 }	
 .info-area {
 	padding-top: 4px;
@@ -473,6 +476,7 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 
 /* 데이터 좌우 정렬을 위한 클래스 */
 .center {text-align: center;}
+.left {text-align: left;}
 .right {text-align: right;}
 .summary {background-color: #dcf2ec; font-weight: bold;}
 
