--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/index.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/index.html
@@ -7,8 +7,13 @@
 <head>
 	<script>
 	const GLOBAL_CONST = {
+		"USERNAME": "[[${USERNAME}]]",
+		"NAME": "[[${NAME}]]",
 		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
-		"TIME_FORMAT": "[[${TIME_FORMAT}]]"
+		"TIME_FORMAT": "[[${TIME_FORMAT}]]",
+		"DELIMITER": "[[${DELIMITER}]]",
+		"YES": "[[${YES}]]",
+		"NO": "[[${NO}]]"
 	};
 	</script>
 
