--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -33,3 +33,4 @@
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
+<script th:src="@{/portal/js/portal.rfc.log.js}"></script>
