--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="content">
 <div class="ui dividing header">
 	Credentials Policy
-	<div class="sub header"></div>
+	<div class="sub header">You can manage credentials policy such as username or password.</div>
 </div>
 <form id="FORM_write" class="ui form" autocomplete="off" onsubmit="return false;">
 <input type="hidden" id="cpSeq" name="cpSeq" th:value="${credentialsPolicy.cpSeq}"/>
@@ -183,6 +183,9 @@
 </div>
 </form>
 <script>
+//팝업 Title
+const POPUP_TITLE = "Credentials Policy";
+
 $(document).ready(function() {
 	if (JpUtilsString.equals($("#mode").val(), "copy"))
 	{
