--- a/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -30,6 +30,9 @@
 	</div>
 </div>
 <script>
+//팝업 Title
+const POPUP_TITLE = "User Group";
+
 $(document).ready(function() {
 	let mode = "[[${mode}]]";
 	
