--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -194,7 +194,7 @@ $(function(){
 	resizeView();
 
 	//상단 메뉴 생성 공통함수
-	makeGnb2();
+	makeGnb();
 	
 	$(".top-header .logo-doobizplus").on("click", function() {
 		goHome()
