--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
@@ -156,8 +156,7 @@ $(function(){
 	resizeView();
 
 	//상단 메뉴 생성 공통함수
-	//makeGnb();
-	makeGnb2();
+	makeGnb();
 	
 	$(".top-header .logo-doobizplus").on("click", function() {
 		goHome()
