--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -22,7 +22,7 @@
 <script>
 $(document).ready(function() {
 	//상단 메뉴 생성 공통함수
-	makeGnb2();
+	makeGnb();
 	
 	$(".top-header .logo-doobizplus").on("click", function() {
 		_goHome()
