--- a/src/main/resources/templates/platform/layout/common/index.html
+++ b/src/main/resources/templates/platform/layout/common/index.html
@@ -3,44 +3,38 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title th:text="#{PLTF_T_DOOBIZ_PLUS}"></title>
-<!-- Meta -->
-<th:block th:replace="platform/layout/common/fragments/meta"></th:block>
-<!-- CSS -->
-<th:block th:replace="platform/layout/common/fragments/css"></th:block>
-<!-- JavaScript -->
-<th:block th:replace="platform/layout/common/fragments/js"></th:block>
+	<title th:text="#{PLTF_T_DOOBIZ_PLUS}"></title>
+	<script th:inline="javascript">
+		/* Set up static values */
+		const GLOBAL_CONST = {};
+		
+		/*[# th:each="variable: ${globalConstVariables}" ]*/
+		GLOBAL_CONST[ [[${variable.key}]] ] = [[${variable.value}]];
+		/*[/]*/
+	</script>
 
-<script>
-	/* Set up static values */
-	const GLOBAL_CONST = {
-		"USERNAME": "[[${USERNAME}]]",
-		"NAME": "[[${NAME}]]",
-		"DATE_TIME_FORMAT": "[[${DATE_TIME_FORMAT}]]",
-		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
-		"TIME_FORMAT": "[[${TIME_FORMAT}]]",
-		"DELIMITER": "[[${DELIMITER}]]",
-		"YES": "[[${YES}]]",
-		"NO": "[[${NO}]]"
-	};
+	<!-- Meta -->
+	<th:block th:replace="platform/layout/common/fragments/meta"></th:block>
+	<!-- CSS -->
+	<th:block th:replace="platform/layout/common/fragments/css"></th:block>
+	<!-- JavaScript -->
+	<th:block th:replace="platform/layout/common/fragments/js"></th:block>
 	
-	//JpUtilsDateFormat.DATE_TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateTimeFormat2()}]]";
-	//JpUtilsDateFormat.DATE_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateFormat2()}]]";
-	//JpUtilsDateFormat.TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getTimeFormat2()}]]";
-	JpUtilsDateFormat.DATE_TIME_FORMAT = GLOBAL_CONST.DATE_TIME_FORMAT;
-	JpUtilsDateFormat.DATE_FORMAT = GLOBAL_CONST.DATE_FORMAT;
-	JpUtilsDateFormat.TIME_FORMAT = GLOBAL_CONST.TIME_FORMAT;
-</script>
+	<script>
+		JpUtilsDateFormat.DATE_TIME_FORMAT = GLOBAL_CONST.DATE_TIME_FORMAT;
+		JpUtilsDateFormat.DATE_FORMAT = GLOBAL_CONST.DATE_FORMAT;
+		JpUtilsDateFormat.TIME_FORMAT = GLOBAL_CONST.TIME_FORMAT;
+	</script>	
 
-<style type="text/css">
-	.main.container {
-		margin-top: 4em;
-	}
-	
-	html {
-		overflow-y: hidden;
-	}
-</style>
+	<style type="text/css">
+		.main.container {
+			margin-top: 4em;
+		}
+		
+		html {
+			overflow-y: hidden;
+		}
+	</style>
 </head>
 <body>
 	<!-- Header start -->
