--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/main.html
@@ -157,7 +157,7 @@ $(function(){
 
 	//상단 메뉴 생성 공통함수
 	//makeGnb();
-	makeGnb2();
+	makeGnb();
 	
 	$(".top-header .logo-doobizplus").on("click", function() {
 		goHome()
