--- a/src/main/resources/templates/portal/layout/iv/eu/parts/popup/index.html
+++ b/src/main/resources/templates/portal/layout/iv/eu/parts/popup/index.html
@@ -5,11 +5,22 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+	<script th:inline="javascript">
+	/* Set up static values */
+	const GLOBAL_CONST = {};
+	
+	/*[# th:each="variable: ${globalConstVariables}" ]*/
+	GLOBAL_CONST[ [[${variable.key}]] ] = [[${variable.value}]];
+	/*[/]*/
+	</script>
+
 	<script>
+	/*
 	const GLOBAL_CONST = {
 		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
 		"TIME_FORMAT": "[[${TIME_FORMAT}]]"
 	};
+	*/
 	</script>
 
 	<title th:text="#{PTL_T_DOOBIZ_PLUS}"></title>
