소스 리펙토링

--- a/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -210,6 +210,33 @@ $(document).ready(function() {
 											prompt: "The {name} is not available. Please enter another name."
 										}
 									]
+								},
+								"Valid From": {
+									identifier: "fromValid",
+									rules: [
+										{
+											type: "empty",
+											prompt: "Please enter {name}."
+										}
+									]
+								},
+								"Valid To": {
+									identifier: "toValid",
+									rules: [
+										{
+											type: "empty",
+											prompt: "Please enter {name}."
+										}
+									]
+								},
+								Sort: {
+									identifier: "sort",
+									rules: [
+										{
+											type: "empty",
+											prompt: "Please enter {name}."
+										}
+									]
 								}
 							},
 							keyboardShortcuts: false
