--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
@@ -236,6 +236,7 @@
 	
 	//주문유형 가져오기
 	let orderComponent = new OrderComponent();
+	orderComponent.isAsync = false;
 	orderComponent.success = function(response, textStatus, jqXHR)
 	{
 		setDefaultHeaderInfo();
