--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -288,6 +288,7 @@ function triggerPasteFromClipload(event)
 
 //주문유형 가져오기
 let orderComponent = new OrderComponent();
+orderComponent.isAsync = false;
 orderComponent.success = function(response, textStatus, jqXHR)
 {
 	setDefaultHeaderInfo();
