--- a/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -142,7 +142,7 @@
 	</div>
 	<!-- Logout -->
 	<form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>	
-	<!-- iframe th:src="|${BASE_PATH}/preload|" style="display:none;"></iframe -->
+	<iframe th:src="|${BASE_PATH}/preload|" style="display:none;"></iframe>
 <script>
 $(window).on("load", function() {
 	ProgressBar.hide();
@@ -290,24 +290,6 @@ function checkExpiredPassword()
 		}
 	});
 };
-
-function preLoading()
-{
-	let urls = [
-		"[[${BASE_PATH}]]/order/display/order/list/data",
-		"[[${BASE_PATH}]]/order/backorder/list/data",
-		"[[${BASE_PATH}]]/order/status/list/data"
-	];
-	
-	$.each(urls, function(index, item) {
-		JpUtilsAjax.get({
-			url: item	
-		});		
-	});
-};
-
-//조회성 페이지의 조회 속도 향상을 위해 먼저 실행시켜 caching 되도록 함
-//preLoading();
 
 let RESIZING_MIN_WIDTH = 1280;
 let RESIZING_MIN_HEIGHT = 720;
