--- a/src/main/resources/templates/portal/iv/hq/parts/export/preload.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/preload.html
@@ -12,7 +12,13 @@
 <script>
 function preLoading()
 {
+	
+	
 	let urls = [
+		"[[${BASE_PATH}]]/order/display/order/list",
+		"[[${BASE_PATH}]]/order/backorder/list",
+		"[[${BASE_PATH}]]/order/status/list"
+		/*	
 		"[[${BASE_PATH}]]/order/display/order/list",
 		"[[${BASE_PATH}]]/order/backorder/list",
 		"[[${BASE_PATH}]]/order/status/list",
@@ -22,6 +28,7 @@ function preLoading()
 		"[[${BASE_PATH}]]/accounts/ap/schedule/list",
 		"[[${BASE_PATH}]]/accounts/ar/list",
 		"[[${BASE_PATH}]]/report/order/list"
+		*/
 	];
 	
 	for (let i=0, length=urls.length; i<length; i++)
