채무내역상세 화면 초기 로딩되지 않도록 조치

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
@@ -77,8 +77,7 @@ $(function(){
 	Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
 		
 	$tableObj = $("#TBL_grid").DataTable({
-		ordering: true, 			// 정렬 기능 켬
-		scrollY: 100,
+		deferLoading: false,
 		columns : [
 			{data: "TKNUM2", title: "[[#{HQP_L_SHIPMENT_NO}]]"},				
 			{data: "EXIDV", title: "[[#{HQP_L_HU_NO}]]"},
