DIVK 요청사항 반영: 버튼 순서 변경, 상세보기 팝업으로 오픈되도록 수정

--- a/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -285,6 +285,16 @@ function _showUserGroup(params)
 	});
 };
  
+//Authority
+function _showAuthority(params)
+{
+	JpUiPopup.open({
+		url: "/platform/mgmt/authority/list?" + JpUtilsPath.jsonToQueryString(params),
+		width: screen.availWidth * 0.7,
+		height: screen.availHeight * 0.7		
+	});
+};
+ 
 //Security Policy
 function _showCredentialsPolicy(params)
 {
