--- a/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
+++ b/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
@@ -108,7 +108,17 @@ function _showUserGroup(params)
 		url: "/platform/mgmt/user/user_group/view?" + JpUtilsPath.jsonToQueryString(params)
 	});
 };
- 
+
+//Authority
+function _showAuthority(params)
+{
+	JpUiPopup.open({
+		url: "/platform/mgmt/authority/list?" + JpUtilsPath.jsonToQueryString(params),
+		width: screen.availWidth * 0.7,
+		height: screen.availHeight * 0.7		
+	});
+};
+
 //Security Policy
 function _showCredentialsPolicy(params)
 {
