--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
@@ -1,227 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
-
 <th:block layout:fragment="content">
-	<script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
-
-	<div class="block-header">
-		<div class="block-title" th:text="#{HQP_T_QUOTATION_LIST}"></div>
-		<div id="BTN_search" class="block-button-area">
-			<!-- button id="BTN_transfer" th:text="#{HQP_B_TRANSFER_TO_ORDER}"></button --><!-- Transfer -->
-			<button id="BTN_pdfDownload" th:text="#{HQP_B_PDF_DOWNLOAD}"></button><!-- PDF Download -->
-			<button id="BTN_back" th:text="#{HQP_B_BACK}"></button><!-- Back -->
-		</div>
-	</div>
-	
-	<div class="condition-area">
-	<table class="condition">
-		<tbody>
-			<tr>
-				<th th:text="#{HQP_L_ORDER_TYPE}"></th><!-- Order Type -->
-				<td id="KONDA_TEXT" class="wp15"></td>
-				<th th:text="#{HQP_L_SHIP_TO_PARTY}"></th><!-- Ship To Party -->
-				<td id="KUNAG_NAME"></td>
-			</tr>
-			<tr>
-				<th th:text="#{HQP_L_PO_NO}"></th><!-- Customer P.O. Number -->
-				<td id="BSTNK"></td>
-				<th th:text="#{HQP_L_SHIPPING_INFO}" rowspan="2"></th><!-- Shipping Info -->
-				<td rowspan="2">
-					<table class="table-inner table-fixed">
-						<thead>
-							<tr>
-								<th th:text="#{HQP_L_SHIPPING_CONDITION}">Shipping Condition</th>
-								<th th:text="#{HQP_L_ROUTE}">Route</th>
-								<th th:text="#{HQP_L_PAYMENT_TERMS}">Payment terms</th>
-								<th th:text="#{HQP_L_INCOTERMS1}">Incoterms1</th>
-								<th th:text="#{HQP_L_INCOTERMS2}">Incoterms2</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td id="VSBED_TX"></td>
-								<td id="ROUTE_TX"></td>								
-								<td id="ZTERM_TX"></td>
-								<td id="INCO1"></td>
-								<td id="INCO2"></td>
-							</tr>
-						</tbody>
-					</table>				
-				</td>
-			</tr>
-			<tr>
-				<th th:text="#{HQP_L_RDD}"></th><!-- Request Delivery Date -->
-				<td id="VDATU"></td>
-			</tr>
-			<tr>
-				<th th:text="#{HQP_L_REMARKS}"></th><!-- Remarks -->				
-				<td colspan="3" id="REMARK"></td>
-			</tr>
-		</tbody>
-	</table>
-	</div>
-	<div class="split-row"></div>
-	
-	<div class="grid-info">
-		<div class="block-button-area">
-			<button id="BTN_download" th:text="#{HQP_B_DOWNLOAD}"></button>
-		</div>	
-		<div class="grid-total">
-			<span th:text="#{HQP_T_TOTAL_AMOUNT}"></span>
-			<div class="split"></div>
-			<span class="total-number" id="NETWR"></span>
-			<div class="split2"></div>
-			<span th:text="#{HQP_T_CREDIT}"></span>
-			<div class="split"></div>
-			<span class="total-number" id="CREDIT"></span>
-			<div class="split2"></div>
-			<span th:text="#{HQP_T_ESTIMATE_WEIGHT}"></span>
-			<div class="split"></div>
-			<span class="total-number" id="TOTAL_WEIGHT"></span>
-		</div>
-	</div>
-	
-	<div id="AREA_grid" class="flex-grow grid-area">
-		<table id="TBL_grid" class="order-column stripe compact"></table>
-	</div>
-	
-	<form id="FORM_search" name="FORM_search" th:action="|${BASE_PATH}/order/display/quot/list|">
-		<input type="hidden" name="pDocType" th:value="${pDocType}">
-		<input type="hidden" name="pOrderType" th:value="${pOrderType}">
-		<input type="hidden" name="pOrderNo" th:value="${pOrderNo}">
-		<input type="hidden" name="pPoNo" th:value="${pPoNo}">
-		<input type="hidden" name="pOrderPartNo" th:value="${pOrderPartNo}">
-		<input type="hidden" name="pStatus" th:value="${pStatus}">
-		<input type="hidden" name="pFromDate" th:value="${pFromDate}">
-		<input type="hidden" name="pToDate" th:value="${pToDate}">
-	</form>
-	
-<script>
-
-//화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
-//컬럼 width 자동. scroller 자동.
-//고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
-
-$(function(){
-	JpUtilsAjax.get({
-		url: "[[${BASE_PATH}]]/order/display/quot/view/data",		
-		data: {"orderNo": "[[${orderNo}]]", "docType": "[[${pDocType}]]"},
-	    success: function(response, textStatus, jqXHR) 
-	    {
-	    	let result = response.RESULT;
-	    	
-	    	let generalZterm = result.generalZterm;
-	    	let mainHeadResult = result.mainHeadResult;
-	    	let general = result.general;	    	
-	    	let item = result.item;
-	    	
-	    	$.each(item, function(key, value) {
-	    		this.VBELN = "[[${orderNo}]]";
-	    	});
-	    	
-	    	let ztermTx = "";
-	    	if (generalZterm != null && generalZterm.length > 0)
-	    	{
-	    		ztermTx = generalZterm[0].TEXT;
-	    	};	    	
-	    	
-	    	$("#KONDA_TEXT").html(mainHeadResult.KONDA_TEXT);
-	    	$("#KUNAG_NAME").html(mainHeadResult.KUNAG_NAME + " " + mainHeadResult.KUNAG_STREET);
-	    	$("#BSTNK").html(general.BSTNK);
-	    	$("#VSBED_TX").html(general.VSBED_TX);
-	    	$("#ROUTE_TX").html(general.ROUTE_TX);
-	    	$("#ZTERM_TX").html(ztermTx);
-	    	$("#INCO1").html(general.INCO1);
-	    	$("#INCO2").html(general.INCO2);
-	    	$("#VDATU").html(general.VDATU);
-	    	$("#REMARK").html(result.remark);
-	    	$("#NETWR").html(mainHeadResult.NETWR + " " + mainHeadResult.WAERK);
-	    	$("#CREDIT").html(mainHeadResult.CREDIT + " " + mainHeadResult.CREDIT_WAERK);
-	    	$("#TOTAL_WEIGHT").html(mainHeadResult.TOTAL_WEIGHT + " " + mainHeadResult.GEWEI);
-	    	
-	    	$tableObj = $("#TBL_grid").DataTable({
-	    		ordering: true,// 정렬 기능 켬
-	    		scrollY: 100,
-	    		columns : [
-	    			{data: "VBELN", title: "[[#{HQP_L_QUOTATION_NO}]]"},//Order No.
-	    			{data: "ITEM", title: "[[#{HQP_L_LINE_ITEM}]]"},//Item
-	    			{data: "MATERIAL_ENT", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Part No.
-	    			{data: "MATERIAL", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
-	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
-	    			{data: "REQ_QTY", title: "[[#{HQP_L_REQ_QTY}]]"},//Req Qty
-	    			{data: "KBETR", title: "[[#{HQP_L_LIST_PRICE}]]"},//List Price
-	    			{data: "NET_PRICE", title: "[[#{HQP_L_NET_PRICE}]]"},//Net price
-	    			{data: "NET_VALUE", title: "[[#{HQP_L_NET_VALUE}]]"},//Net value
-	    			{data: "AVAILABILITY", title: "[[#{HQP_L_AVAILABILITY}]]"}//Available
-	    		],
-	    		columnDefs: [
-	    			{targets: [0, 1, 5, 9], className: "dt-body-center"},
-	    			{targets: [6, 7, 8], className: "dt-body-right"},
-	    		],	    		
-	    		data: item,
-	    		initComplete: function() {
-	    			ProgressBar.hide();
-	    		}	    		
-	    	});
-	    	
-	    	// Datatable grid 초기 설정 셋업
-	    	initGridTable($tableObj);
-	    }		
-	});
-});
-
-$("#BTN_pdfDownload").on("click", function() {
-	document.location.href = "[[${BASE_PATH}]]/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=BT06";
-});
-
-$("#BTN_back").on("click", function() {
-	$("#FORM_search").submit();
-});
-
-$("#BTN_transfer").on("click", function() {
-	Popup.open("[[${BASE_PATH}]]/order/create/popup/transfer_to_order", 500, 200);
-});
-
-$("#BTN_download").on("click", function() {
-	_gridDownload($tableObj, "Quotation_List");
-});
-
-function doTransferOrder(orderType)
-{
-	JpUtilsAjax.post({
-		url: "[[${BASE_PATH}]]/order/create/transfer_to_order/save",
-		method: "POST",
-		data: {"orderNo": "[[${orderNo}]]", "orderType": orderType},
-		beforeSend: function(jqXHR, settings)
-		{
-			ProgressBar.show();
-		},		
-	    success: function(response, textStatus, jqXHR) 
-	    {
-	    	let result = response.RESULT;
-	    	
-	    	if (result.TYPE == "S")
-	    	{
-	    		let orderNo = result.SALESDOCUMENT_EX;
-	    		let message = "[[#{HQP_M_ORDER_CREATED}]]".replace("{0}", orderNo);
-	    		
-	    		alert(message);
-	    		
-	    		document.location.href = "[[${BASE_PATH}]]/order/display/order/view?orderNo=" + orderNo;
-	    	}
-	    	else
-	    	{
-	    		alert(result.MESSAGE);
-	    	};
-	    },
-		complete: function(jqXHR, textStatus)
-		{
-			ProgressBar.hide();
-		}
-	});
-};
-</script>	
+	<th:block th:replace="|${BASE_PATH}/order/display/quot/view_inc|"></th:block>
 </th:block>
