--- a/src/main/resources/templates/platform/mgmt/conn_resource/view.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/view.html
@@ -5,10 +5,6 @@
 	layout:decorate="~{platform/layout/popup/index}">
 
 <th:block layout:fragment="content">
-<div class="ui dividing header">
-	SAP Connection Resource
-	<div class="sub header">This platform offers how to access functions of SAP using JCO and you need to set up the connection info. first.</div>
-</div>
 <div class="ui one column grid">
 	<div class="column">
 		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
@@ -30,6 +26,9 @@
 <input type="hidden" name="scrSeq" th:value="${scrSeq}" />
 </form>
 <script>
+//팝업 Title
+const POPUP_TITLE = "SAP Connection Resource";
+
 $(document).ready(function() {
 	JpUtilsAjax.get({
 		url: "/platform/mgmt/conn_resource/view/layout",
