--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/view.html
@@ -3,189 +3,6 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
-	
 <th:block layout:fragment="content">
-	<div class="block-header">
-		<div class="block-title" th:text="#{HQP_T_CLAIM_DISPLAY}"></div>
-		<div class="block-button-area">
-			<button id="BTN_print" type="button" th:text="#{HQP_B_PRINT}"></button><!-- Print -->
-			<button id="BTN_back" type="button" th:text="#{HQP_B_BACK}"></button><!-- Back -->
-		</div>		
-	</div>
-	
-	<div class="condition-area">
-	<table class="condition table-fixed">
-		<tbody>
-			<tr>
-				<th th:text="#{HQP_L_CLAIM_NO}"></th><!--Claim No  -->
-				<td><span th:text="${orderNo}"></span></td>
-				<th th:text="#{HQP_L_CLAIM_DOC_CREATE_DATE}"></th><!--Doc date  -->
-				<td><span th:text="${docDate}"></span></td>
-				<th th:text="#{HQP_L_ITEM_ROWS}"></th><!--Item Rows  -->
-				<td id="ITEM_COUNT"></td>				
-			</tr>
-		</tbody>
-	</table>
-	</div>
-	<div class="split-row"></div>
-	
-	<div id="AREA_grid" class="flex-grow grid-area">
-		<table id="TBL_grid" class="order-column stripe compact"></table>
-	</div>		
-	
-	<form id="FORM_search" name="FORM_search">
-		<input type="hidden" id="pFromDate" 	name="pFromDate" 	th:value="${pFromDate}">
-		<input type="hidden" id="pToDate" 		name="pToDate" 		th:value="${pToDate}">
-		<input type="hidden" id="pComplaintNo" 	name="pComplaintNo" th:value="${pComplaintNo}">
-		<input type="hidden" id="pReferenceNo" 	name="pReferenceNo" th:value="${pReferenceNo}">
-		<input type="hidden" id="pPartNo" 		name="pPartNo" 		th:value="${pPartNo}">
-	</form>
-	
-	<form id="FORM_download">
-		<input type="hidden" id="fileName" 		name="fileName">	
-		<input type="hidden" id="orderNo" 		name="orderNo" 		th:value="${orderNo}">	
-		<input type="hidden" id="intNo" 		name="intNo">
-		<input type="hidden" id="docuItem" 		name="docuItem">		
-	</form>
-	
-	<!-- Text Area -->
-	<div id="textareaDiv" style="border:1px solid gray;width:300px;height:170px;backgroud:white;position:relative;top:0;left:0;display:none;">
-	    <div id="table_type1" style="padding:10px">
-	        <textarea style="width:278;height:150px;overflow:auto;padding:5px;" ></textarea>
-	    </div>
-	</div>
-	<!-- /Text Area -->
-	
-<script>
-let $tableObj;
-
-JpUtilsAjax.get({
-	url: "[[${BASE_PATH}]]/claim/display/view/data",
-	data: {"pOrderNo": "[[${orderNo}]]", "pDocType": "[[${docType}]]"},		
-    success: function(data, textStatus, jqXHR) 
-    {
-		let itemList = data.RESULT.itemList;
-		let fileList = data.RESULT.fileList;
-		let reason1List = data.RESULT.reason1List;		
-		let reason2List = data.RESULT.reason2List;
-		
-    	$("#ITEM_COUNT").html(itemList.length);
-    	
-		for (let i=0, length=itemList.length; i<length; i++)
-		{
-			let reason1, reason2, fileName = "";	
-			
-			for (let j=0, length1=reason1List.length; j<length1; j++)
-			{
-				if (itemList[i].COMPLAINT == reason1List[j].VALUE)
-				{
-					reason1 = reason1List[j].TEXT;
-					break;
-				}
-			};
-			
-			for (let k=0, length2=reason2List.length; k<length2; k++)
-			{
-				if (itemList[i].REASON == reason2List[k].VALUE)
-				{
-					reason2 = reason2List[k].TEXT;
-					break;
-				}
-			};			
-
-			for (let l=0, length3=fileList.length; l<length3; l++)
-			{
-				if (itemList[i].ITEM == fileList[l].DOCU_ITEM)
-				{
-					fileName += "<div onclick=downloadAttachment('" + JpUtilsString.replaceAll(fileList[l].FILE_NAME, " ", "") + "','" + fileList[l].INT_NO + "','" + fileList[l].DOCU_ITEM + "')>" + fileList[l].FILE_NAME + "</div>";
-				}
-			};
-			
-			itemList[i].TEXT = JpUtilsString.trimToEmpty(reason1);
-			itemList[i].TEXT2 = JpUtilsString.trimToEmpty(reason2);
-			itemList[i].FILE_NAME = JpUtilsString.trimToEmpty(fileName);
-		}
-	    	
-    	$tableObj = $("#TBL_grid").DataTable({
-    		ordering: true,// 정렬 기능 켬
-    		columns : [
-    			{data: "REF_ORD", 		title: "[[#{HQP_L_REFERENCE_NO}]]"},// Reference No
-    			{data: "MATERIAL", 		title: "[[#{HQP_L_PART_NO}]]"},// Part No
-    			{data: "QTY", 			title: "[[#{HQP_L_QTY}]]"},// Qty	
-    			{data: "TEXT", 			title: "[[#{HQP_L_REASON1}]]"},// Reason1
-    			{data: "TEXT2", 		title: "[[#{HQP_L_REASON2}]]"},// Reason2																										
-    			{data: "COMPLAINT_DESC",title: "[[#{HQP_L_ADDITIONAL_TEXT}]]"},// Text
-    			{data: "RCOMMENT", 		title: "[[#{HQP_L_COMMENT}]]"},// Comment
-    			{data: "FILE_NAME", 	title: "[[#{HQP_L_ATTACHED_FILE}]]"},// Attached File	
-    			{data: "ZZDEALDT", 		title: "[[#{HQP_L_ORIGIN_DOC_DATE}]]"}// Origin Doc. Date
-    		],  	
-    		columnDefs: [
-    			{targets: [7], className: "link"},
-    			{targets: [0, 2, 8], className: "dt-body-center"}
-    		],	    		    		
-    		data: itemList,
-    		initComplete:function(settings, json) 
-    		{			
-    			ProgressBar.hide();
-    		}
-    	});
-    	
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
-		
-		$("#TBL_grid tbody").on("click", "tr", function (e){
-		    let tblGrid = $("#TBL_grid").DataTable();	    
-		    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
-			let rowData = tblGrid.row(this).data();
-			
-			if (index == 4)
-			{	
-				let desc = $(this).text();
-				if (desc.length > 0)
-				{
-					let taDiv = $("#textareaDiv");
-					let tmpTa = $("#textareaDiv textarea");
-			
-				    if (taDiv.css("display") == "none")
-				    {
-						tmpTa.empty();
-						tmpTa.text(desc);
-			
-						taDiv.css({
-							"display":"block",
-							"position":"absolute",
-							"top":$(this).offset().top+20,
-							"left":$(this).offset().left
-						});
-					}
-				    else
-				    {
-						taDiv.css("display","none");
-						tmpTa.text(desc);
-					}
-				}	
-			}
-		}).mouseout(function(){
-			 //hideTextArea();
-		});			
-    }
-});
-
-$("#BTN_print").on("click", function() {
-	document.location.href = "[[${BASE_PATH}]]/claim/display/download/doc?orderNo=[[${orderNo}]]&docType=[[${docType}]]";
-});
-
-$("#BTN_back").on("click", function() {
-	$("#FORM_search").attr("action", "[[${BASE_PATH}]]/claim/display/list").submit();
-});
-
-function downloadAttachment(fileName, intNo, docuItem)
-{
-	$("#fileName").val(fileName);
-	$("#intNo").val(intNo);
-	$("#docuItem").val(docuItem);										
-	$("#FORM_download").attr("action", "[[${BASE_PATH}]]/claim/display/download/attachment").submit();	
-};
-</script>	
+	<th:block th:replace="|${BASE_PATH}/claim/display/view_inc|"></th:block>
 </th:block>
-	
