--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
@@ -8,8 +8,8 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_DELIVERY_STATUS}"></div><!-- Delivery Status -->
 		<div class="block-button-area">
-			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
 			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
+			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
 		</div>
 	</div>
 	<div class="condition-area">
@@ -145,7 +145,8 @@ $(function(){
 		
 		//$("#pShipmentNo2").val(rowData.TKNUM);			
 		$("#shipmentNo").val(rowData.TKNUM);
-		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/delivery/view").submit();
+		//$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/delivery/view").submit();
+		Popup.open("[[${BASE_PATH}]]/order/delivery/popup/view?" + $("#FORM_search").serialize());
 	});
 	
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
