--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
@@ -194,13 +194,15 @@ $(function(){
 		$("#orderNo").val(data.VBELN);
 		$("#status").val(data.RFGSK);
 		
-		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/inquiry/view").submit();
+		//$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/inquiry/view").submit();
+		Popup.open("[[${BASE_PATH}]]/order/display/inquiry/popup/view?" + $("#FORM_search").serialize());
 	});
 	
 	$("#TBL_grid tbody").on("click", "td:nth-child(3)", function () {
 		let orderNo = $tableObj.row($(this)).data().VBELN2;		
 		
-		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
+		//Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
+		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo);
 	});
 	
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
