Xfree 파일 업로드 개발

--- a/src/main/resources/templates/portal/iv/board/view_inc.html
+++ b/src/main/resources/templates/portal/iv/board/view_inc.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	
-	<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+	<script src="/editor_html5/js/xfe_main.js"></script>
 	
 	<div class="block-header">
 		<div class="block-title" th:text="${boardName}"></div>
